--- a/hello/package.json
+++ b/hello/package.json
@@ -1,31 +1,3 @@
 {
-    "name": "包的名称，唯一，小写英文字母、数字、下划线；不包含空格" ,
-    "description": "包的简要说明" ,
-    "version": "符合语义化版本识别规范的版本字符串" ,
-    "keywords": ["关键字数组，用于搜索"] ,
-    "maintainers":[
-        {
-            "name": "维护者名字1",
-            "email": "邮件，可选" ,
-            "web": "网站，可选"
-        }
-    ],
-    "contributors": [] , //格式与维护者数组相同
-    "bugs": "bug提交的地址：可以是网址、或者电子邮件地址" ,
-    "lecenses": [
-        {
-            "type": "" ,
-            "url": ""
-        }
-    ] , // 许可证数组
-    "repositories": [
-        {
-            "type": "" ,
-            "url": "" ,
-            "path": ""
-        }
-
-    ] ,    // 托管仓库数组
-    "main": "./lib/interface.js" ,
-    "dependencies": [] //依赖
+    "main": "./lib/interface.js"
 }
